--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -77,7 +77,7 @@
 				<p class="price">$26<sup>.80</sup></p>
 			</div>-->
             
-            <!--<li class="list_item">
+            <li class="list_item">
             <div class="heading">
 				<h1>Stewed lamb belly in casserole</h1>
                 <p class="desc"></p>
