--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -41,6 +41,24 @@
     	
         <div class="grid_thumb">
 			<div class="heading">
+				<h1>千層豆腐炒肉粒</h1>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_s.jpg" alt="千層豆腐炒肉粒" />
+		</div><!--grid_thumb-->
+
+		
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>XO醬臘味粒炒四季豆</h1>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_s.jpg" alt="XO醬臘味粒炒四季豆" />
+		</div><!--grid_thumb-->		
+		
+		
+        <div class="grid_thumb">
+			<div class="heading">
 				<h1>健康六合菜</h1>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
