--- a/chinese/heart_list.html
+++ b/chinese/heart_list.html
@@ -41,6 +41,30 @@
     	
         
     	<ul class="bxslider">
+
+        <li class="list_item">
+			<div class="heading">
+				<h1>千層豆腐炒肉粒</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_l.jpg" alt="千層豆腐炒肉粒" />
+		</li><!--list_item-->		
+
+        <li class="list_item">
+			<div class="heading">
+				<h1>XO醬臘味粒炒四季豆</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_l.jpg" alt="千層豆腐炒肉粒" />
+		</li><!--list_item-->	
+		
+		
 		<li class="list_item">
             <div class="heading">
 				<h1>健康六合菜</h1>
