--- a/english/heart_list.html
+++ b/english/heart_list.html
@@ -43,13 +43,37 @@
     	
         
     	<ul class="bxslider">
-		<li class="list_item">
-            <div class="heading">
+		
+        <li class="list_item">
+			<div class="heading">
+				<h1>Stir-Fried Meat With Mixed Vegetable And Thin Sliced Tofu</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_l.jpg" alt="Stir-Fried Meat With Mixed Vegetable And Thin Sliced Tofu" />
+		</li><!--list_item-->
+		
+        <li class="list_item">
+			<div class="heading">
+				<h1>Stir-Fried Preserved Meat With Sliced Green Bean</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                </div>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_l.jpg" alt="Stir-Fried Preserved Meat With Sliced Green Bean" />
+		</li><!--list_item-->		
+		
+		
+	<li class="list_item">
+            		<div class="heading">
 				<h1>Stir-fried lotus root and ginkgo with mixed vegetable</h1>
                 <p class="desc">在此填入菜餚簡介信息, 在此填入菜餚簡介信息,在此填入菜餚簡介信息,在此填入.</p>
                 <div class="tags">
-                	<p>預訂</p>
-                    <p>4位起</p>
+                <p>預訂</p>
+                <p>4位起</p>
                 </div>
 				<p class="price">$18<sup>.80</sup></p>
 			</div>
