--- a/english/specialties_heart.html
+++ b/english/specialties_heart.html
@@ -41,7 +41,22 @@
 	<div id="gridview" class="menu_body">
     	
 
-
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Stir-Fried Meat With Mixed Vegetable And Thin Sliced Tofu</h1>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_s.jpg" alt="Stir-Fried Meat With Mixed Vegetable And Thin Sliced Tofu" />
+		</div><!--grid_thumb-->
+		
+        <div class="grid_thumb">
+			<div class="heading">
+				<h1>Stir-Fried Preserved Meat With Sliced Green Bean</h1>
+				<p class="price">$28<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_s.jpg" alt="Stir-Fried Preserved Meat With Sliced Green Bean" />
+		</div><!--grid_thumb-->		
+		
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Stir-fried lotus root and ginkgo with mixed vegetable</h1>
