--- a/chinese/heart_list.html
+++ b/chinese/heart_list.html
@@ -44,13 +44,13 @@
 
         <li class="list_item">
 			<div class="heading">
-				<h1>千層豆腐炒肉粒</h1>
+				<h1>千層豆腐炒粒粒</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_l.jpg" alt="千層豆腐炒肉粒" />
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_l.jpg" alt="千層豆腐炒粒粒" />
 		</li><!--list_item-->		
 
         <li class="list_item">
