--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -44,7 +44,7 @@
 				<h1>千層豆腐炒粒粒</h1>
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_s.jpg" alt="千層豆腐炒肉粒" />
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_s.jpg" alt="千層豆腐炒粒粒" />
 		</div><!--grid_thumb-->
 
 		
