--- a/english/heart_list.html
+++ b/english/heart_list.html
@@ -46,24 +46,24 @@
 		
         <li class="list_item">
 			<div class="heading">
-				<h1>Stir-Fried Meat With Mixed Vegetable And Thin Sliced Tofu</h1>
+				<h1>Stir-fried diced vegetables, meat and dried shrimps trimmed with thin sliced tofu</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_l.jpg" alt="Stir-Fried Meat With Mixed Vegetable And Thin Sliced Tofu" />
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_l.jpg" alt="Stir-Fried Diced Vegetables, Meat and Dried Shrimps Trimmed With Thin Sliced Tofu" />
 		</li><!--list_item-->
 		
         <li class="list_item">
 			<div class="heading">
-				<h1>Stir-Fried Preserved Meat With Sliced Green Bean</h1>
+				<h1>Stir-Fried thin sliced green bean with preserved meat in XO sauce</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
 				<p class="price">$28<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_l.jpg" alt="Stir-Fried Preserved Meat With Sliced Green Bean" />
+			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_l.jpg" alt="Stir-Fried thin sliced green bean with preserved meat in XO sauce" />
 		</li><!--list_item-->		
 		
 		
