--- a/chinese/heart_list.html
+++ b/chinese/heart_list.html
@@ -244,7 +244,7 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_l.jpg" alt="黑椒茄瓜焗牛仔骨" />
 		</li><!--list_item-->
         
-        <li class="list_item">
+        <!--<li class="list_item">
 			<div class="heading">
 				<h1>燒焗牛肋骨</h1>
                 <p class="desc"></p>
