--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -200,7 +200,7 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="黑椒茄瓜焗牛仔骨" />
 		</div><!--grid_thumb-->
         
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>燒焗牛肋骨</h1>
 				<p class="price">$52<sup>.80</sup></p>
