--- a/english/specialties_heart.html
+++ b/english/specialties_heart.html
@@ -202,7 +202,7 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="Braised beef short rib with eggplant in black pepper sauce" />
 		</div><!--grid_thumb-->
         
-        <div class="grid_thumb">
+        <!--<div class="grid_thumb">
 			<div class="heading">
 				<h1>Charcoal grilled and broiled beef short rib fillet</h1>
 				<p class="price">$52<sup>.80</sup></p>
