--- a/english/heart_list.html
+++ b/english/heart_list.html
@@ -246,7 +246,7 @@
 			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_l.jpg" alt="Braised beef short rib with eggplant in black pepper sauce" />
 		</li><!--list_item-->
         
-        <li class="list_item">
+        <!--<li class="list_item">
 			<div class="heading">
 				<h1>Charcoal grilled and broiled beef short rib fillet</h1>
                 <p class="desc"></p>
