--- a/chinese/desserts_list.html
+++ b/chinese/desserts_list.html
@@ -79,7 +79,7 @@
             
 		</li><!--list_item-->
         
-        <li class="list_item">
+        <!--<li class="list_item">
             <div class="heading">
 				<h1>頤東雞仔餅(半打/壹打)</h1>
                 <p class="desc">在此填入菜餚簡介信息, 在此填入菜餚簡介信息,在此填入菜餚簡介信息,在此填入.</p>
@@ -153,7 +153,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$6<sup>.80</sup> / $12<sup>.80</sup><sup></sup></p>
+				<p class="price">$9<sup>.80</sup> / $18<sup>.80</sup><sup></sup></p>
 			</div>
             <div class="heading">
 				<h1>養顏雙皮奶(位)</h1>
