update item and price

--- a/english/desserts_list.html
+++ b/english/desserts_list.html
@@ -79,7 +79,7 @@
             
 		</li><!--list_item-->
         
-        <li class="list_item">
+        <!--<li class="list_item">
             <div class="heading">
 				<h1>Yi Dong special meat pastry <br />(half dz / 1 dz)</h1>
                 <p class="desc">在此填入菜餚簡介信息, 在此填入菜餚簡介信息,在此填入菜餚簡介信息,在此填入.</p>
@@ -153,7 +153,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price twoprices">$6<sup>.80</sup> /<br />$12<sup>.80</sup></p>
+				<p class="price twoprices">$9<sup>.80</sup> /<br />$18<sup>.80</sup></p>
 			</div>
             <div class="heading">
 				<h1>Double-boiled milk (per person)</h1>
