update hotpot image

--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -57,7 +57,7 @@
                 </div>
 				<p class="price">$20<sup>.80</sup></p>
 			</div>
-            <img src="../images/dishes/3_bbq/mixedmushroom_l.jpg" alt="鹵水雜菇 (例)" />
+            <img src="../images/dishes/3_bbq/10_casserole/hotpot.jpg" alt="Sizzling chicken and matsutake casserole" />
         </li><!--list_item-->
             
             <!--
