--- a/chinese/birdsnest_swimbladder_seacucumber.html
+++ b/chinese/birdsnest_swimbladder_seacucumber.html
@@ -30,11 +30,11 @@
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -58,7 +58,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">金蒜黑松露爆炒遼參 (例) </h1>
-				<p class="price">$48<sup>.80</sup></p>
+				<p class="price">$52<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_s.jpg" alt="金蒜黑松露爆炒遼參" />
 		</div><!--grid_thumb-->
@@ -71,7 +71,7 @@
                         <span class="inner">$33.80</span>
                     </span>
                 </p>-->
-                <p class="price ">$33<sup>.80</sup></p>
+                <p class="price ">$36<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/vinegarseacucumber_s.jpg" alt="陳醋浸遼參" />
 		</div><!--grid_thumb-->
@@ -96,7 +96,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鮑汁遼參 (1條)</h1>
-                <p class="price ">$33<sup>.80</sup></p>
+                <p class="price ">$36<sup>.80</sup></p>
 				<!--<p class="price special">$28<sup>.80</sup>
                 <span class="outer">
                         <span class="inner">$33.80</span>
@@ -119,7 +119,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">原隻花膠皇 <br />(足10位用)</h1>
-                <p class="price ">$388<sup>.00</sup></p>
+                <p class="price ">$438<sup>.00</sup></p>
 				<!--<p class="price special">$328<sup>.00</sup>
                 <span class="outer">
                         <span class="inner">$388.00</span>
