--- a/chinese/specialties_heart.html
+++ b/chinese/specialties_heart.html
@@ -30,11 +30,11 @@
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a class="active" href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -42,184 +42,154 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>千層豆腐炒粒粒</h1>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$32<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_s.jpg" alt="千層豆腐炒粒粒" />
+			<img src="../images/dishes/6_specialties_xinyi/slidedtofu_s.jpg"/>
 		</div><!--grid_thumb-->
 
-		
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>XO醬臘味粒炒四季豆</h1>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$29<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_s.jpg" alt="XO醬臘味粒炒四季豆" />
+			<img src="../images/dishes/6_specialties_xinyi/xostirfriedmeat_s.jpg"  />
 		</div><!--grid_thumb-->		
-		
-		
+
+
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>健康六合菜</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/healthy6_s.jpg" alt="健康六合菜" />
+			<img src="../images/dishes/6_specialties_xinyi/healthy6_s.jpg"/>
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>剁椒蒸金針菇</h1>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$20<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/goldmushroom_s.jpg" alt="剁椒蒸金針菇" />
+			<img src="../images/dishes/6_specialties_xinyi/goldmushroom_s.jpg"  />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>南乳炸西排骨</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<h1>南乳炸西施骨	</h1>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/southpork_s.jpg" alt="南乳炸西排骨" />
+			<img src="../images/dishes/6_specialties_xinyi/southpork_s.jpg"/>
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1 class="tworow">薑油紫蘇薄荷葉<br />焗雞件</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<h1 class="tworow">薑油紫蘇薄荷葉焗雞件</h1>
+				<p class="price">$24<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/mintchicken_s.jpg" alt="薑油紫蘇薄荷葉焗雞件" />
+			<img src="../images/dishes/6_specialties_xinyi/mintchicken_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1 class="tworow">手剁馬蹄碎豆豉<br />蒸肉餅</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<h1 class="tworow">手剁馬蹄碎豆豉蒸肉餅</h1>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/beanmeatcake_s.jpg" alt="手剁馬蹄碎豆豉蒸肉餅" />
+			<img src="../images/dishes/6_specialties_xinyi/beanmeatcake_s.jpg"  />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>海洲煎蝦餅</h1>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/shrimpcake_s.jpg" alt="海洲煎蝦餅" />
+			<img src="../images/dishes/6_specialties_xinyi/shrimpcake_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>湘味小炒肥牛肉</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/fattybeef_s.jpg" alt="湘味小炒肥牛肉" />
+			<img src="../images/dishes/6_specialties_xinyi/fattybeef_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>瑤柱蒸水蛋</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/steamedegg_s.jpg" alt="瑤柱蒸水蛋" />
+			<img src="../images/dishes/6_specialties_xinyi/steamedegg_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>鹽油水焗海石斑</h1>
-				<p class="price seasonal">時價</p>
+				<h1>崧子原條石斑</h1>
+				<p class="price ">$68<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/bakedfish_s.jpg" alt="鹽油水焗海石斑" />
+			<img src="../images/dishes/6_specialties_xinyi/IMG_1017friedrockcod_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>胡椒玉蘭炒藕盒</h1>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/lotusbox_s.jpg" alt="胡椒玉蘭炒藕盒" />
+			<img src="../images/dishes/6_specialties_xinyi/lotusbox_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>脆皮海鮮酥</h1>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/crispyseafood_s.jpg" alt="脆皮海鮮酥" />
+			<img src="../images/dishes/6_specialties_xinyi/crispyseafood_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>游龍脆香</h1>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/pond_s.jpg" alt="游龍脆香" />
-		</div><!--grid_thumb-->
-
-
-        <div class="grid_thumb">
-			<div class="heading">
-				<h1>蟲草花炒水咸魚</h1>
-				<p class="price">$18<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/6_specialties_xinyi/flowerfish_s.jpg" alt="蟲草花炒水咸魚" />
+			<img src="../images/dishes/6_specialties_xinyi/pond_s.jpg"  />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>青芥焗牛仔肉</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/mustardbeef_s.jpg" alt="青芥焗牛仔肉" />
+			<img src="../images/dishes/6_specialties_xinyi/mustardbeef_s.jpg" alt="Diced veal stir-fried with Chinese broccoli in wasabi sauce" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鮮茄汁煮蝦線</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/tomatoshrimp_s.jpg" alt="鮮茄汁煮蝦線" />
+			<img src="../images/dishes/6_specialties_xinyi/tomatoshrimp_s.jpg" />
 		</div><!--grid_thumb-->
 
 
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>黑椒茄瓜焗牛仔骨</h1>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" alt="黑椒茄瓜焗牛仔骨" />
+			<img src="../images/dishes/6_specialties_xinyi/blackpepperbeef_s.jpg" />
 		</div><!--grid_thumb-->
-        
-        <!--<div class="grid_thumb">
-			<div class="heading">
-				<h1>燒焗牛肋骨</h1>
-				<p class="price">$52<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/6_specialties_xinyi/charcoalgrilledbbsrf_s.jpg" alt="燒焗牛肋骨" />
-		</div><!--grid_thumb-->
-        
-        <!--<div class="grid_thumb">
-			<div class="heading">
-				<h1>炭燒西冷扒</h1>
-				<p class="price">$56<sup>.80</sup></p>
-			</div>
-			<img src="../images/dishes/6_specialties_xinyi/sirloin_s.jpg" alt="炭燒西冷扒" />
-		</div>--><!--grid_thumb-->
-
-
-
-
-
 
 	</div><!-- menu_body-->
 </div><!--wrapper-->
