--- a/english/noodlesrices_list.html
+++ b/english/noodlesrices_list.html
@@ -28,15 +28,15 @@
 			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
             <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
             <li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a href="specialties_luxury.html">Chef Tony  Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Casseroles</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties</a></li>
+			<li><a href="hotpot.html">Casseroles</a></li>
+<li><a href="oldfashion.html">Old Time Specialties</a></li>
             <li><a class="active" href="noodles_rices.html">Noodles &amp; rice</a></li>
             <li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
 <!--<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
+<li><a href="oldfashion.html">Old Time Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
@@ -59,11 +59,12 @@
         
         <li class="list_item">
 			<div class="heading">
-				<h1>Stir-fried rice noodles with matsutake and beef</h1>
+				<h1>Stir-fried rice noodles with matsutake and beef shoulder tender
+</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$22<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/beefnoodle_l.jpg" alt="Stir-fried rice noodles with matsutake and beef" />
 		</li><!--list_item-->
@@ -74,18 +75,18 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/porkrice_l.jpg" alt="Stir-fried glutinous rice with preserved meat and dried shrimp" />
 		</li><!--list_item-->
         
         <li class="list_item">
 			<div class="heading">
-				<h1>Fried rice with minced pork and shrimp sauce</h1>
+				<h1>Fried rice with minced pork and shrimp paste sauce</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/shrimprice_l.jpg" alt="Fried rice with minced pork and shrimp sauce" />
 		</li><!--list_item-->
@@ -118,7 +119,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$17<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/hotpotnoodle_l.jpg" alt="Stir-fried noodles with ginger and green scallions served in casserole" />
 		</li><!--list_item-->
@@ -129,7 +130,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$24<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friedpurplericeeel_l.jpg" alt="Fried purple rice with grilled eel" />
 		</li><!--list_item-->
@@ -140,7 +141,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$26<sup>.80</sup></p>
+				<p class="price">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friedricefishroe_l.jpg" alt="Fried rice with fish roe, black truffle and egg white" />
 		</li><!--list_item-->
@@ -151,7 +152,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friednoodlesmushroom_l.jpg" alt="Fried noodles with assorted mushrooms" />
 		</li><!--list_item-->
@@ -162,7 +163,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friedricenoodleshrimps_l.jpg" alt="Fried rice noodles topped with shrimps and egg" />
 		</li><!--list_item-->
@@ -173,7 +174,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$21<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/driedscallops_l.jpg" alt="Dried scallops and egg white fried rice" />
 		</li><!--list_item-->
@@ -184,7 +185,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$21<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/efu_l.jpg" alt="Dried stir-fried E-fu noodles with shrimp roe and mushrooms" />
 		</li><!--list_item-->
@@ -195,7 +196,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$20<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/dicedmeat_l.jpg" alt="Fried rice topped with diced meat, shrimps and scallops" />
 		</li><!--list_item-->
