--- a/english/oldfashion.html
+++ b/english/oldfashion.html
@@ -27,37 +27,178 @@
 			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
             <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
             <li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a href="specialties_luxury.html">Chef Tony  Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Casseroles</a></li>
-<li><a class="active" href="oldfashion.html">Seasonal Specialties</a></li>
+			<li><a href="hotpot.html">Casseroles</a></li>
+<li><a class="active" href="oldfashion.html">Old Time Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
 <!--<li><a href="desserts_list.html">Desserts</a></li>
             <li><a href="beverage_list.html">Beverage</a></li>
-			<li><a class="active" href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
+			<li><a class="active" href="oldfashion.html">Old Time Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
-    	
-        <a href="oldfashion_list.html">
-        <div class="grid_thumb">
-			<!--<div class="heading">
-				<h1>Old Time Specialties</h1>
-			</div>-->
-			<img src="../images/dishes/old_fashion/YD2014_254x174Aeng-01.jpg" alt="" />
-		</div><!--grid_thumb-->
-        </a>
 
-
-        <a href="homestyle_list.html">
-        <div class="grid_thumb">
-			<!--<div class="heading">
-				<h1>Home Style Specialties</h1>
-			</div>-->
-			<img src="../images/dishes/old_fashion/YD2014_254x174Beng-01.jpg" alt="" />
+    	<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Stewed pork belly with kudzu in casserole</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/fangehotpot_s.jpg" />
 		</div><!--grid_thumb-->
-        </a>
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Steamed minced pork paste with salty fish</h1>
+				<p class="price">$26<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/saltedfishmeat_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Deep-fried oysters</h1>
+				<p class="price">$32<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/friedoyster_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Stewed assorted mushrooms, vermicelli and cabbage in casserole</h1>
+				<p class="price">$21<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/wildmushroompot_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Braised diced seafood and tofu with abalone sauce in casserole</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/abalonetofu_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Stir-fried pork spareribs with honey and haw sauce</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/honeybone_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Home style stir-fried fresh milk</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/friedmilk_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Deep-fried pork belly trimmed with pineapple in sweet and sour sauce</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/gulumeat_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Stir-fried cuttlefish slices with chives in XO sauce</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/xosquid_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Stir-fried vermicelli and scrambled egg with black truffle paste</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/truffleladyegg_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Steamed chicken with matsutake, goji berries and red dates (half)</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/earthchicken_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Salmon fish roll</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/salmonsauce_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Fish paste cooked with preserved meat and radish shreds</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/raddishfish_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Stir-fried dried scallops with chives and mung bean sprouts</h1>
+				<p class="price">$32<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/ninescallop_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Stir-fried minced pork with snow bean and preserved vegetable</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/sweetbean_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Braised beef slices with enoki mushrooms and pepper</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/fatbeefroll_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Steamed pork belly with salty lemon and preserved vegetable</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/saltedlemon_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Steamed eggplant with preserved meat</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/steameggplant_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="threerow">Steamed free range chicken in special steamed wok (half)</h1>
+				<p class="price">$29<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/origchicken_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">Choy sum cooked in salty water in casserole</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/ECD_0086choysum_s.jpg" alt="" />
+		</div><!--grid_thumb-->
 
 	</div><!-- menu_body-->
 </div><!--wrapper-->
@@ -76,12 +217,11 @@
 	 // $( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
 	  $("<img class='glare' src='../images/glare.png'>").insertAfter( "div.grid_thumb img" );
 	  
-	  /*
 	  $("div.grid_thumb").each(function(index){
 		  index2 = index + 1;
-	  	  //$(this).wrap( "<a href='starters_list.html#starter"+ index2 +"'></a>" );
-		  $(this).wrap( "<a href='cny_list.html?id="+ index2 +"'></a>" );
-	  });*/
+	  	  $(this).wrap( "<a href='oldfashion_list.html?id="+ index2 +"'></a>" );
+		  //$(this).wrap( "<a href='starters_list.html'></a>" );
+	  });
 	  
 	});
 	window.addEventListener("load",function() {
