--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -30,11 +30,11 @@
 			<li><a class="active" href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -42,7 +42,7 @@
 		<div class="grid_thumb">
 			<div class="heading">
 				<h1>鹵水雜菇 (例)</h1>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$20<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/mixedmushroom_s.jpg" alt="鹵水雜菇 (例)" />
 		</div><!--grid_thumb-->
@@ -51,7 +51,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>鹵水拼盤 (例)</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/mixeddish_s.jpg" alt="鹵水拼盤(例)" />
 		</div><!--grid_thumb-->
@@ -59,9 +59,17 @@
         <div class="grid_thumb">
 			<div class="heading">
                 <h1>梅子燒鴨 (半隻)</h1>
-				<p class="price">$22<sup>.80</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/plumgeese_s.jpg" alt="梅子燒鴨" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+                <h1>片皮鴨二食</h1>
+				<p class="price">$88<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/ECD_0046pekingduck_s.jpg" />
 		</div><!--grid_thumb-->
 
 
@@ -103,19 +111,35 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>紅燒妙齡鴿 (隻)</h1>
-				<p class="price">$22<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/friedpigeon_s.jpg" alt="紅燒妙齡鴿" />
 		</div><!--grid_thumb-->
 
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>黑毛豬蜜汁叉燒 (例)</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/ECD_0029bbqpork_s.jpg"  />
+		</div><!--grid_thumb-->
 
-        <div class="grid_thumb">
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>秘制燒排骨</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/ECD_0036porkspareribs_s.jpg"  />
+		</div><!--grid_thumb-->
+
+
+        <!-- <div class="grid_thumb">
 			<div class="heading">
 				<h1>脆皮叉燒 (例)</h1>
 				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/crispybbqpork_s.jpg" alt="脆皮叉燒" />
-		</div><!--grid_thumb-->
+		</div> --><!--grid_thumb-->
 
 
         <!--<div class="grid_thumb">
@@ -130,7 +154,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>黑松露撈雞 (半隻)</h1>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$29<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/trufflechicken_s.jpg" alt="黑松露撈雞(半隻)" />
 		</div><!--grid_thumb-->
@@ -138,7 +162,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">砂窩啫啫走地雞<br />(半隻)</h1>
-				<p class="price">$26<sup>.80</sup></p>
+				<p class="price">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/jehjeh_s.jpg" alt="砂窩啫啫走地雞(半隻)" />
 		</div><!--grid_thumb-->
@@ -154,9 +178,25 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>撈起一品雞 (半隻)</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$24<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/upone_s.jpg" alt="撈起一品雞(半隻)" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>沙薑雞 (半隻)</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/ECD_0065chickenginger_s.jpg"/>
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>葱油淋雞 (半隻)</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/3_bbq/ECD_0053chickenscallion_s.jpg"/>
 		</div><!--grid_thumb-->
 
 	</div><!-- menu_body-->
