--- a/chinese/birdsnest_etc_list.html
+++ b/chinese/birdsnest_etc_list.html
@@ -30,11 +30,11 @@
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
@@ -72,7 +72,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$48<sup>.80</sup></p>
+				<p class="price">$52<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_l.jpg" alt="金蒜黑松露爆炒遼參" />
 		</li><!--list_item-->
@@ -83,7 +83,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price ">$33<sup>.80</sup></p>
+				<p class="price ">$36<sup>.80</sup></p>
                 <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>特價</p>
@@ -125,7 +125,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price ">$33<sup>.80</sup></p>
+				<p class="price ">$36<sup>.80</sup></p>
                 <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>特價</p>
@@ -156,7 +156,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price ">$388<sup>.00</sup></p>
+				<p class="price ">$438<sup>.00</sup></p>
                 <!--<div class="tags special">
                 	<p>特價</p>
                 </div>
