--- a/chinese/casseroles.html
+++ b/chinese/casseroles.html
@@ -31,9 +31,9 @@
 			<li><a href="specialties_heart.html">心意小炒</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
-			<li><a class="active" href="hotpot_list.html">煲仔</a></li>
+			<li><a class="active" href="hotpot.html">煲仔</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
