--- a/chinese/desserts.html
+++ b/chinese/desserts.html
@@ -31,11 +31,11 @@
 			<li><a href="specialties_heart.html">心意小炒</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="abalone_sharkfin_list.html">鮑魚、魚翅</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a class="active" href="desserts.html">甜品</a></li>
 			<li><a href="beverage_list.html">飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
