--- a/chinese/desserts_list.html
+++ b/chinese/desserts_list.html
@@ -30,13 +30,13 @@
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
             <li><a class="active" href="drinks_desserts.html">甜品 / 飲料</a></li>
 			<!--<li><a class="active" href="desserts_list.html">甜品</a></li>
 			<li><a href="beverage_list.html">飲料</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
@@ -149,7 +149,7 @@
         <li class="list_item noimg">
             
             <div class="heading">
-				<h1>蒸蓮蓉壽包(半打/壹打)</h1>
+				<h1>蒸蓮蓉壽桃(半打/壹打)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
