--- a/chinese/noodles_rices.html
+++ b/chinese/noodles_rices.html
@@ -30,11 +30,11 @@
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a class="active" href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -51,7 +51,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>松茸牛肩肉炒河</h1>
-				<p class="price">$22<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/beefnoodle_s.jpg" alt="松茸牛肉炒河粉" />
 		</div><!--grid_thumb-->
@@ -60,7 +60,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>臘味生炒糯米飯</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/porkrice_s.jpg" alt="臘味生炒糯米飯" />
 		</div><!--grid_thumb-->
@@ -69,7 +69,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>蝦醬頭抽肉鬆炒飯</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/shrimprice_s.jpg" alt="蝦醬頭抽肉鬆炒飯" />
 		</div><!--grid_thumb-->
@@ -94,7 +94,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>砂窩薑葱麵</h1>
-				<p class="price">$16<sup>.80</sup></p>
+				<p class="price">$17<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/hotpotnoodle_s.jpg" alt="砂窩薑葱麵" />
 		</div><!--grid_thumb-->
@@ -102,15 +102,15 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>生炒鰻魚紫米飯</h1>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$24<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friedpurplericeeel_s.jpg" alt="生炒鰻魚紫米飯" />
 		</div><!--grid_thumb-->
         
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>黑松露飛魚子蛋炒飯</h1>
-				<p class="price">$26<sup>.80</sup></p>
+				<h1 class="tworow">黑松露飛魚子蛋白炒飯</h1>
+				<p class="price">$28<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friedricefishroe_s.jpg" alt="黑松露飛魚子蛋白炒飯" />
 		</div><!--grid_thumb-->
@@ -118,7 +118,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>素珍菌炒麵</h1>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$19<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friednoodlesmushroom_s.jpg" alt="素珍菌炒麵" />
 		</div><!--grid_thumb-->
@@ -126,7 +126,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>滑蛋蝦球炒河</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/friedricenoodleshrimps_s.jpg" alt="滑蛋蝦球炒河" />
 		</div><!--grid_thumb-->
@@ -134,7 +134,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>瑤柱蛋白炒飯</h1>
-				<p class="price">$21<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/driedscallops_s.jpg" alt="瑤柱蛋白炒飯" />
 		</div><!--grid_thumb-->
@@ -142,7 +142,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>蝦子乾燒伊麵</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$21<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/efu_s.jpg" alt="蝦子乾燒伊麵" />
 		</div><!--grid_thumb-->
@@ -150,7 +150,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>福州炒飯</h1>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$20<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/7_noodlesandrice/dicedmeat_s.jpg" alt="福州炒飯" />
 		</div><!--grid_thumb-->
