--- a/chinese/oldfashion.html
+++ b/chinese/oldfashion.html
@@ -30,34 +30,175 @@
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-            <li><a class="active" href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+            <li><a class="active" href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
             <!--<li><a href="beverage_list.html">飲料</a></li>
-			<li><a class="active" href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+			<li><a class="active" href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
-    	
-        <a href="oldfashion_list.html">
-        <div class="grid_thumb">
-			<!--<div class="heading">
-				<h1>懷舊小菜篇</h1>
-			</div>-->
-			<img src="../images/dishes/old_fashion/YD2014_254x174Achi-01.jpg" alt="" />
-		</div><!--grid_thumb-->
-        </a>
 
-
-        <a href="homestyle_list.html">
-        <div class="grid_thumb">
-			<!--<div class="heading">
-				<h1>家常小菜篇</h1>
-			</div>-->
-			<img src="../images/dishes/old_fashion/YD2014_254x174Bchi-01.jpg" alt="" />
+    	<div class="grid_thumb">
+			<div class="heading">
+				<h1>粉葛扣肉煲</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/fangehotpot_s.jpg" />
 		</div><!--grid_thumb-->
-        </a>
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>鹹魚蒸肉餅</h1>
+				<p class="price">$26<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/saltedfishmeat_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>酥炸大生蠔</h1>
+				<p class="price">$32<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/friedoyster_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>野菌粉絲紹菜煲</h1>
+				<p class="price">$21<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/wildmushroompot_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>鮑汁海皇滑豆腐</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/abalonetofu_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>山楂蜜汁骨</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/honeybone_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>大良炒鮮奶</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/friedmilk_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>菠蘿咕嚕肉</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/12_oldfashion/gulumeat_s.jpg" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">韭菜花XO醬爆炒花枝片</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/xosquid_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>黑松露炒貴妃蛋</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/truffleladyegg_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1 class="tworow">松茸杞子紅棗蒸土雞 (半隻)</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/earthchicken_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>千島三文魚卷</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/salmonsauce_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>蘿蔔絲臘味煮魚滑</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/raddishfish_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>韭菜花銀芽炒干貝</h1>
+				<p class="price">$32<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/ninescallop_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>欖角肉碎爆甜豆</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/sweetbean_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>泡椒川湯金菇肥牛卷</h1>
+				<p class="price">$23<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/fatbeefroll_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>咸檸檬味菜蒸豬腩肉</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/saltedlemon_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>籠仔臘味絲蒸茄子</h1>
+				<p class="price">$22<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/steameggplant_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>蒸鍋原味雞 (半隻)</h1>
+				<p class="price">$29<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/origchicken_s.jpg" alt="" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>油鹽水煲淋菜心</h1>
+				<p class="price">$24<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/11_homestyle/ECD_0086choysum_s.jpg" alt="" />
+		</div><!--grid_thumb-->
 
 	</div><!-- menu_body-->
 </div><!--wrapper-->
@@ -78,7 +219,7 @@
 	  
 	  $("div.grid_thumb").each(function(index){
 		  index2 = index + 1;
-	  	  //$(this).wrap( "<a href='noodlesrices_list.html?id="+ index2 +"'></a>" );
+	  	  $(this).wrap( "<a href='oldfashion_list.html?id="+ index2 +"'></a>" );
 		  //$(this).wrap( "<a href='starters_list.html'></a>" );
 	  });
 	  
