--- a/chinese/starters.html
+++ b/chinese/starters.html
@@ -29,11 +29,11 @@
 			<li><a href="bbq.html">馳名燒味</a></li>
 			<li><a href="specialties_luxury.html">山珍小菜</a></li>
 			<li><a href="specialties_heart.html">心意小炒</a></li>
-			<li><a href="hotpot_list.html">煲仔</a></li>
-<li><a href="oldfashion.html" >懷舊 / 家常小菜</a></li>
+			<li><a href="hotpot.html">煲仔</a></li>
+<li><a href="oldfashion.html" >懷舊家常小菜</a></li>
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="drinks_desserts.html">甜品 / 飲料</a></li>
-<!--<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>-->
+<!--<li><a href="oldfashion.html" >懷舊家常小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -181,6 +181,14 @@
 				<p class="price">$8<sup>.98</sup></p>
 			</div>
 			<img src="../images/dishes/1_starters/spicyfeet2_s.jpg" alt="麻辣鮮掌" />
+		</div><!--grid_thumb-->
+
+		<div class="grid_thumb">
+			<div class="heading">
+				<h1>沙薑豬手</h1>
+				<p class="price">$9<sup>.98</sup></p>
+			</div>
+			<img src="../images/dishes/1_starters/ECD_0081pighock_s.jpg" />
 		</div><!--grid_thumb-->
         
 
