--- a/english/birdsnest_etc_list.html
+++ b/english/birdsnest_etc_list.html
@@ -28,15 +28,15 @@
 			<li><a class="active tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
             <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
             <li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a href="specialties_luxury.html">Chef Tony  Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Casseroles</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties</a></li>
+			<li><a href="hotpot.html">Casseroles</a></li>
+<li><a href="oldfashion.html">Old Time Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
 <!--<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
+<li><a href="oldfashion.html">Old Time Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
@@ -74,7 +74,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$48<sup>.80</sup></p>
+				<p class="price">$52<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_l.jpg" alt="Stir-fried spike sea cucumber with garlic and black truffle" />
 		</li><!--list_item-->
@@ -85,7 +85,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price ">$33<sup>.80</sup></p>
+				<p class="price ">$36<sup>.80</sup></p>
                 <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>Special</p>
@@ -127,7 +127,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price ">$33<sup>.80</sup></p>
+				<p class="price ">$36<sup>.80</sup></p>
                 <!--<p class="desc"></p>
                 <div class="tags special">
                 	<p>Special</p>
@@ -158,7 +158,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price ">$388<sup>.80</sup></p>
+				<p class="price ">$438<sup>.80</sup></p>
                 <!--<div class="tags special">
                 </div>
 				<p class="price">$328<sup>.00</sup>
