--- a/english/birdsnest_swimbladder_seacucumber.html
+++ b/english/birdsnest_swimbladder_seacucumber.html
@@ -27,15 +27,15 @@
 			<li><a class="active tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
             <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
             <li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a href="specialties_luxury.html">Chef Tony  Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Casseroles</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties</a></li>
+			<li><a href="hotpot.html">Casseroles</a></li>
+<li><a href="oldfashion.html">Old Time Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
 <!--<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
+<li><a href="oldfashion.html">Old Time Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
@@ -59,7 +59,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1 class="tworow">Stir-fried spike sea cucumber with garlic and black truffle (Reg.) </h1>
-				<p class="price">$48<sup>.80</sup></p>
+				<p class="price">$52<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_s.jpg" alt="Stir-fried spike sea cucumber with garlic and black truffle" />
 		</div><!--grid_thumb-->
@@ -67,7 +67,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Spike sea cucumber soaked in vinegar</h1>
-                <p class="price ">$33<sup>.80</sup></p>
+                <p class="price ">$36<sup>.80</sup></p>
 				<!--<p class="price special">$28<sup>.80</sup>
                 <span class="outer">
                         <span class="inner">$33.80</span>
@@ -97,7 +97,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Braised spike sea cucumber with abalone sauce</h1>
-                <p class="price ">$33<sup>.80</sup></p>
+                <p class="price ">$36<sup>.80</sup></p>
 				<!--<p class="price special">$28<sup>.80</sup>
                 <span class="outer">
                         <span class="inner">$33.80</span> 
@@ -120,7 +120,7 @@
         <div class="grid_thumb">
 			<div class="heading">
 				<h1>Stewed whole premium fish maw trimmed with pea sprouts (for 10 persons)</h1>
-                <p class="price ">$388<sup>.00</sup></p>
+                <p class="price ">$438<sup>.00</sup></p>
 				<!--<p class="price special">$328<sup>.00</sup>
                 <span class="outer">
                         <span class="inner">$388.00</span>
