--- a/english/desserts_list.html
+++ b/english/desserts_list.html
@@ -28,15 +28,15 @@
 			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
             <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
             <li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a href="specialties_luxury.html">Chef Tony  Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Casseroles</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties</a></li>
+			<li><a href="hotpot.html">Casseroles</a></li>
+<li><a href="oldfashion.html">Old Time Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
             <li><a class="active" href="drinks_desserts.html">Desserts / Beverages</a></li>
 			<!--<li><a class="active" href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
+<li><a href="oldfashion.html">Old Time Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
@@ -81,7 +81,7 @@
         
         <!--<li class="list_item">
             <div class="heading">
-				<h1>Yi Dong special meat pastry <br />(half dz / 1 dz)</h1>
+				<h1>Chef Tony  special meat pastry <br />(half dz / 1 dz)</h1>
                 <p class="desc">在此填入菜餚簡介信息, 在此填入菜餚簡介信息,在此填入菜餚簡介信息,在此填入.</p>
                 <div class="tags">
                 </div>
