--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -17,8 +17,9 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
+    <a id="back" href="hotpot.html">Back</a>
     <!--<a id="back" href="abalone_sharkfin_list.html">Back</a>-->
-	<a href="../chinese/hotpot_list.html?id=1" class="lang">中文</a> </div><!--header-->
+	<a href="../chinese/hotpot.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
@@ -28,15 +29,15 @@
 			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
             <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
             <li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a href="specialties_luxury.html">Chef Tony  Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a class="active" href="hotpot_list.html">Casseroles</a></li>
-            <li><a href="oldfashion.html">Seasonal Specialties</a></li>
+			<li><a class="active" href="hotpot.html">Casseroles</a></li>
+            <li><a href="oldfashion.html">Old Time Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
 <!--<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
+<li><a href="oldfashion.html">Old Time Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body" >
@@ -55,7 +56,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$24<sup>.80</sup></p>
 			</div>
             <img src="../images/dishes/10_casserole/hotpot.jpg" alt="Sizzling chicken and matsutake casserole" />
         </li><!--list_item-->
@@ -79,13 +80,13 @@
             
             <li class="list_item">
             <div class="heading">
-				<h1>Stewed lamb belly in casserole</h1>
+				<h1>Stewed ox tail with red wine in casserole</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$36<sup>.80</sup></p>
+				<p class="price">$56<sup>.80</sup></p>
 			</div>
-            <img src="../images/dishes/10_casserole/stewedlambbelly_l.jpg" alt="Stewed lamb belly in casserole" />
+            <img src="../images/dishes/10_casserole/ECD_0070oxtail_l.jpg" alt="Stewed ox tail with red wine in casserole" />
       		</li>--><!--list_item-->
             
             <li class="list_item">
@@ -94,7 +95,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$32<sup>.80</sup></p>
 			</div>
             <img src="../images/dishes/10_casserole/stewedoysters_l.jpg" alt="Stewed oysters and barbequed pork belly casserole" />
       		</li><!--list_item-->
@@ -105,7 +106,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
             <img src="../images/dishes/10_casserole/stewedpumpkin_l.jpg" alt="Stewed pumpkin and beef short ribs in casserole" />
       		</li><!--list_item-->
@@ -116,7 +117,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$23<sup>.80</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/10_casserole/prawnballandtofucasserole_l.jpg" alt="Prawn ball and tofu casserole" />
       		</li><!--list_item-->
@@ -127,7 +128,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$24<sup>.80</sup></p>
+				<p class="price">$26<sup>.80</sup></p>
             </div>
 			<img src="../images/dishes/10_casserole/goosewebs_l.jpg" alt="Chinese mushrooms and goose webs casserole" />
       		</li><!--list_item-->
@@ -138,7 +139,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$32<sup>.80</sup></p>
+				<p class="price">$34<sup>.80</sup></p>
             </div>
 			<img src="../images/dishes/10_casserole/scgwsrcasserole_l.jpg" alt="Sea cucumber, goose webs and shrimp roe casserole" />
       		</li><!--list_item-->
@@ -149,7 +150,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$30<sup>.80</sup></p>
             </div>
 			<img src="../images/dishes/10_casserole/blackcod_l.jpg" alt="Black cod and bitter gourd casserole" />
       		</li><!--list_item-->
@@ -188,12 +189,12 @@
 	  //$( "<div class='arrow-right'></div>").insertAfter( "#sidebar a.active" );
 	  $( "li.list_item" ).each(function(index){
 		  index2 = index + 1;
-		  $(this).prepend( "<a id='abalone"+ index2 + "'></a>" );
+		  $(this).prepend( "<a id='hotpot"+ index2 + "'></a>" );
 	  });
 	  
 	  
 	  $('.bxslider').bxSlider({
-			//startSlide: id - 1,
+			startSlide: id - 1,
 			mode: 'vertical',
 			pager: false,
 			infiniteLoop: true,
