--- a/english/luxury_list.html
+++ b/english/luxury_list.html
@@ -28,21 +28,74 @@
 			<li><a class="tworow" href="birdsnest_swimbladder_seacucumber.html">Bird's nest, Sea cucumber <br />&amp; Fish maw</a></li>
             <li><a href="abalone_sharkfin_list.html">Abalone &amp; Shark's Fin</a></li>
             <li><a href="bbq.html">Barbequed meat</a></li>
-			<li><a class="active" href="specialties_luxury.html">Yi Dong Specialties</a></li>
+			<li><a class="active" href="specialties_luxury.html">Chef Tony  Specialties</a></li>
 			<li><a href="specialties_heart.html">Home style favourites</a></li>
-			<li><a href="hotpot_list.html">Casseroles</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties</a></li>
+			<li><a href="hotpot.html">Casseroles</a></li>
+<li><a href="oldfashion.html">Old Time Specialties</a></li>
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="drinks_desserts.html">Desserts / Beverages</a></li>
 <!--<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="oldfashion.html">Seasonal Specialties &#9733;</a></li>-->
+<li><a href="oldfashion.html">Old Time Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
 
 
     	<ul class="bxslider">
+
+    	<li class="list_item">
+            <div class="heading">
+				<h1>Stir-fried prawn ball and scallop with black garlics</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                	<p></p>
+                    <p></p>
+                </div>
+				<p class="price">$36<sup>.80</sup></p>
+			</div>
+                    <img src="../images/dishes/5_specialties_shanzhen/ECD_0104prawnscallop_l.jpg" />
+		</li><!--list_item-->
+
+		<li class="list_item">
+            <div class="heading">
+				<h1>Stir-fried beef fillet with black garlics</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                	<p></p>
+                    <p></p>
+                </div>
+				<p class="price">$32<sup>.80</sup></p>
+			</div>
+                    <img src="../images/dishes/5_specialties_shanzhen/ECD_0108beefblack_l.jpg" />
+		</li><!--list_item-->
+
+		<li class="list_item">
+            <div class="heading">
+				<h1>Stir-fried lobster with rolled oats</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                	<p></p>
+                    <p></p>
+                </div>
+				<p class="price seasonal">Seasonal</p>
+			</div>
+                    <img src="../images/dishes/5_specialties_shanzhen/ECD_0189_lobsteroats_l.jpg" />
+		</li><!--list_item-->
+
+		<li class="list_item">
+            <div class="heading">
+				<h1>Stir-fried fresh crab with black or white pepper</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                	<p></p>
+                    <p></p>
+                </div>
+				<p class="price seasonal">Seasonal</p>
+			</div>
+                    <img src="../images/dishes/5_specialties_shanzhen/ECD_0197_blackpeppercrab_l.jpg" />
+		</li><!--list_item-->
+
         <li class="list_item">
             <div class="heading">
 				<h1>Charcoal Grilled Wagyu Beef</h1>
@@ -65,7 +118,7 @@
                 	<p>預訂</p>
                     <p>4位起</p>
                 </div>
-				<p class="price">$36<sup>.80</sup></p>
+				<p class="price">$42<sup>.80</sup></p>
 			</div>
                     <img src="../images/dishes/5_specialties_shanzhen/lamb9_l.jpg" alt="Baked lamb belly with boletus and basil" />
 
@@ -77,7 +130,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/abalonemushroom_l.jpg" alt="Dry stir-fried king oyster mushrooms with pepper and garlic" />
 		</li><!--list_item-->
@@ -99,7 +152,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$29<sup>.80</sup></p>
+				<p class="price">$32<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/panfried_beef_shoulder_tender_with_lemongrass_l.jpg" alt="Pan-fried Beef Shoulder Tender with Lemongrass, Matsutake and Kig Oyster Mushrooms" />
 		</li>
@@ -110,14 +163,14 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/currybeef_l.jpg" alt="Thai style curry beef brisket" />
 		</li><!--list_item-->
 
         <li class="list_item">
 			<div class="heading">
-				<h1>Stir-fried lobster with home made spicy sauce</h1>
+				<h1>Stir-fried lobster with spicy sauce</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
@@ -132,20 +185,20 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/lambfishball_l.jpg" alt="Pan-fried morel mushroom stuffed with cuttlefish paste" />
 		</li><!--list_item-->
 
         <li class="list_item">
 			<div class="heading">
-				<h1>Stir-fried fish maw, celery and green bean with abalone sauce</h1>
+				<h1>Stir-fried fish maw with black truffle, ginger and green scallion in casserole</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$36<sup>.80</sup></p>
+				<p class="price">$68<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/5_specialties_shanzhen/specialswimbladder_l.jpg" alt="Stir-fried fish maw, celery and green bean with abalone sauce" />
+			<img src="../images/dishes/5_specialties_shanzhen/ECD_0077fishmaw_l.jpg" />
 		</li><!--list_item-->
 
         <!--<li class="list_item">
@@ -165,7 +218,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$18<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/bakedfish_l.jpg" alt="Stir-fried cuttlefish paste and yam sticks with pepper" />
 		</li><!--list_item-->
@@ -176,7 +229,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/deepfriedshrimp_l.jpg" alt="Deep-fried black truffle shrimp paste bean curd sheet roll" />
 		</li><!--list_item-->
@@ -187,7 +240,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$36<sup>.80</sup></p>
+				<p class="price">$38<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/friedclam_l.jpg" alt="Stir-fried sea cucumber meat and king oyster mushroom with garlic" />
 		</li><!--list_item-->
@@ -209,20 +262,20 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$20<sup>.80</sup></p>
+				<p class="price">$22<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/softtofu_l.jpg" alt="Stewed tofu and assorted diced seafood with goose liver paste sauce" />
 		</li><!--list_item-->
 
         <li class="list_item">
 			<div class="heading">
-				<h1>Pan-fried diced beef fillet with vinegar and black truffle</h1>
+				<h1>Pan-Pan-fried diced wagyu beef with vinegar and black truffle</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$28<sup>.80</sup></p>
+				<p class="price">$68<sup>.80</sup></p>
 			</div>
-			<img src="../images/dishes/5_specialties_shanzhen/italianbeef_l.jpg" alt="Pan-fried diced beef fillet with vinegar and black truffle" />
+			<img src="../images/dishes/5_specialties_shanzhen/ECD_0097wagyu_l.jpg"  />
 		</li><!--list_item-->
 
         <li class="list_item">
@@ -231,7 +284,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$19<sup>.80</sup></p>
+				<p class="price">$24<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/bakedchicken_l.jpg" alt="Pan-fried and baked boneless chicken with black truffle" />
 		</li><!--list_item-->
@@ -273,7 +326,7 @@
 
         <li class="list_item">
 			<div class="heading">
-				<h1>Stir-fried lobster with eggplant in homemade spicy sauce</h1>
+				<h1>Stir-fried lobster with eggplant in spicy sauce</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
@@ -288,7 +341,7 @@
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
-				<p class="price">$42<sup>.80</sup></p>
+				<p class="price">$46<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/5_specialties_shanzhen/sfscucumber_l.jpg" alt="Stir-fried sea cucumber and beef shoulder tender with green scallion in bean sauce" />
 		</li><!--list_item-->
